prover-ray/zkcdriver/testdata/synced/invalid/shift_07.zkc
//error:3:7-13:expected type u16
fn f(x:u8, y:u16) -> (r:u16) {
  r = x << y
  return
}
